<resources>
    <string name="app_name">Chef Legend</string>

    <string name="connection_issue_warning">Woooops! Connection issue happens. Please try again later.</string>
    <string name="error_info">Error occured: </string>

    //Menu
    <string name="message">Messages</string>
    <string name="map">Map</string>
    <string name="headphoto">Change Head Photo</string>
    <string name="add_photo_warning">You want to submit file:</string>
    <string name="add_head_photo_success">Head Photo Changed</string>
    <string name="storeSwitch">Open Store</string>
    <string name="store_close">Close Store</string>
    <string name="store_open">Open Store</string>
    <string name="setting">Settings</string>
    <string name="sign_out">Sign out</string>

    //Warning
    <string name="try_again_warning">Loading fail. Please try again.</string>
    <string name="exit_tittle">Are you sure?</string>
    <string name="exit_confirm">Confirm</string>
    <string name="exit_cancel">Cancel</string>

    //MainPage
    <string name="main_page_tittle">Chef Legend</string>
    <string name="main_page_sub_tittle">Sweeten your dream here</string>
    <string name="main_page_login_button">Login</string>
    <string name="main_page_register_button">Register</string>

    //RegisterPage
    <string name="register_page_tittle">Register</string>
    <string name="register_page_email_Et">Email</string>
    <string name="register_page_email_error">Invalid emailInput address</string>
    <string name="register_page_password_Et">Password</string>
    <string name="register_page_password_error">6-16 characters required</string>
    <string name="register_page_password_confirm_Et">Confirm password</string>
    <string name="register_page_password_confirm_error">Password entered twice are not same</string>
    <string name="register_page_name_Et">Name (optional)</string>
    <string name="register_page_name_error">Only alphabets, numbers and _ allowed here. 6-20 characters allowed. </string>
    <string name="register_page_phoneNum_Et">Phone (optional)</string>
    <string name="register_page_phoneNum_error">10 characters required</string>

    <string name="register_page_role_selection">Register as a: </string>
    <string name="register_page_chef_Rb">Chef</string>
    <string name="register_page_customer_Rb">Customer</string>

    <string name="register_page_store_name_Et">Store Name</string>
    <string name="register_page_store_name_error">Store Name Required</string>

    <string name="register_page_business_selection">Business Style: </string>
    <string name="register_page_retail_Rb">Retail</string>
    <string name="register_page_individual_Rb">Individual</string>

    <string name="register_page_retail_address">Retail Address</string>
    <string name="register_page_retail_address_error">Store Address Required</string>

    <string name="register_page_certificate">Certificate: </string>
    <string name="register_page_certificate_Btn">Add certificate file here</string>

    <string name="register_page_postal_address">Postal Address</string>

    <string name="register_page_agreement">I promise that all information provided above is true.</string>
    <string name="register_page_agreement_error">Please check on the box to concert agreement.</string>
    <string name="register_page_register_Btn">Register</string>
    <string name="register_page_cancel_Btn">Cancel</string>

    <string name="register_page_verify_account_creation_success">Verify account created.</string>
    <string name="register_page_account_snapshot_creation_success">Account data storage created.</string>
    <string name="register_page_certificate_upload_success">Certificate uploaded.</string>
    <string name="register_page_account_creation_fail">New account creation failed. </string>

    <string name="register_page_register_success">Welcome to the new world.</string>

    //LoginPage
    <string name="login_page_tittle">Login</string>
    <string name="login_page_email_Et">Email</string>
    <string name="login_page_email_error">Invalid emailInput address</string>
    <string name="login_page_password_Et">Password</string>
    <string name="login_page_password_error">6-16 characters required</string>
    <string name="login_page_login_Btn">Login</string>
    <string name="login_page_cancel_Btn">Cancel</string>

    <string name="login_page_login_fail">Authentication failed.</string>
    <string name="login_page_login_success">Welcome back:</string>

    //Dashboard
    <string name="title_activity_menu_dashboard">Menu</string>
    <string name="title_activity_store_dashboard">Stores</string>
    <string name="title_activity_contact">Contacts</string>

    <string name="upload_dialog_samsung_warning_tittle">Picture Option Limitation</string>
    <string name="upload_dialog_samsung_warning_content">Please choose a landscape picture if it is uploaded from a Samsung phone. Otherwise the picture might be rotated.</string>

    //Chat
    <string name="chat_page_send_button">Send</string>
    <string name="chat_page_input">Input</string>

    <string name="refresh">Refresh</string>


    //Cake
    <string name="title_activity_add_cake">Create New Cake</string>
    <string name="cake_add_tittle">Please full fill following blanks to add a new cake:</string>
    <string name="cake_name_hint">Cake name</string>

    <string name="allergy_ingredients">Ingredients Allergy Guide:</string>
    <string name="ingredients_milk">Milk</string>
    <string name="ingredients_egg">Egg</string>
    <string name="ingredients_nuts">Nuts</string>
    <string name="ingredients_gluten">Gluten</string>
    <string name="ingredients_alcohol">Alcohol</string>
    <string name="ingredients_sugar">Sugar</string>

    <string name="cake_size_text">The largest size of this cake:</string>
    <string-array name="cake_size_unit">
        <item>inch</item>
        <item>centimeter</item>
    </string-array>

    <string name="cake_price_text">Please set a price for your cake:</string>

    <string name="cake_description_hint">Put your new cake description here.</string>
    <string name="cake_picture">Press add button to add your cake picture here:</string>
    <string name="cake_add_submit">Submit</string>
    <string name="cake_add_cancel">Cancel</string>
    <string name="cake_add_submit_warning">You want to submit.</string>
    <string name="cake_add_cancel_warning">You want to leave without saving.</string>
    <string name="cake_add_success">New cake has been added to menu.</string>

    <string name="cake_add_name_error">Cake name required</string>
    <string name="cake_add_size_error">Cake size required</string>
    <string name="cake_add_price_error">Cake prize required</string>
    <string name="cake_add_picture_error">Cake picture required</string>

    <string name="cake_add_picture_add_confirm">New photo added.</string>

    <string name="cake_choose_tittle">You chose file:</string>

    <string name="menu_cake_photo_add">Add photo</string>
    <string name="cake_delete_warning">You are deleting this cake.</string>

    // Chat
    <string name="message_empty_deny">Send empty denied.</string>


    // Map
    <string name="title_activity_maps">Map</string>
    <string name="map_error_warning">Can not find address. Please contact store.</string>

</resources>
