<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_map"
        android:orderInCategory="1"
        android:icon="@drawable/map"
        android:title="@string/map"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_message"
        android:orderInCategory="2"
        android:icon="@drawable/chat"
        android:title="@string/message"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_headphoto"
        android:orderInCategory="3"
        android:title="@string/headphoto"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_store_switch"
        android:orderInCategory="4"
        android:title="@string/storeSwitch"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sign_out"
        android:orderInCategory="999"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>
